新增了微信API

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@koa/cors": "^5.0.0",
+    "axios": "^1.7.7",
+    "js-shortid": "^0.1.1",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.1",
