--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-router": "^12.0.1",
     "koa-static": "^5.0.0",
     "log4js": "^6.9.1",
-    "mysql2": "^3.11.0"
+    "mysql2": "^3.11.0",
+    "webp-converter": "^2.3.3"
   }
 }
